Copyright (c) 2021 Josh Davidson (Octal450)
I will note if new ITAF tuning or config is required. Simply check the "ITAF CONFIG.txt" file.

---------------------------------------------------------------------------------------------------------------------

V4.0.7:
[Control Loop]
* Added: New rate based FLCH (speed on pitch) controller
* Added: Ability to use a third NAV radio
* Fixed: If all APs and FDs are off, and the autopilot is engaged in V/S mode, the pitch might jerk
* Fixed: Flare law shallowing up too early and floating
* Fixed: Really slow response in some situations
* Fixed: Strange bug with glideslope
* Changed: Flight Director Pitch now outputs in degrees (in Canvas, you can just translate it the same as pitch scale)

[Logic]
* Added: Ability to define when APs and A/THR are available
* Added: APs and A/THR trips off if respective system is unavailable
* Added: Ability to set blank mode
* Added: Ability to start with flight directors on by default
* Added: Armed modes disarm if they become unavailable
* Added: Ability to use a third NAV radio
* Added: Built in VS/FPA switching logic
* Fixed: Bad handling of radio selection
* Fixed: LOC capturing too early on shallow intercept and increasing intercept angle
* Fixed: Flare engagement

[GUI]
* Added: NAV source toggles for all 3 radios

---------------------------------------------------------------------------------------------------------------------

V4.0.6:
[Control Loop]
* Added: Ability to separate HDG HLD and HDG SEL
* Fixed: Bug in T/O and G/A modes
* Fixed: Altitude Predictor overshoots when ALT HLD is pushed
* Fixed: Incorrect order of IAS and Mach syncing and filtering in drivers
* Fixed: IAS and Mach smoothing logic active when no system was active
* Fixed: A/THR far too slow to advance power in T/O and G/A modes

[Nasal]
* Added: Ability to separate HDG HLD and HDG SEL (New config required)
* Fixed: Possibility of switching to Mach breaks T/O and G/A CLB