@@ -939,7 +939,7 @@
 	</filter>
 	
 	<filter>
-		<name>IT-CONTROLLER: Align/Rollout/Takeoff</name>
+		<name>IT-CONTROLLER: Align/Rollout/Takeoff/Wings Level</name>
 		<debug>false</debug>
 		<type>gain</type>
 		<gain>1.0</gain>
@@ -953,6 +953,10 @@
 					<equals>
 						<property>/it-autoflight/output/lat</property>
 						<value>5</value>
+					</equals>
+					<equals>
+						<property>/it-autoflight/output/lat</property>
+						<value>6</value>
 					</equals>
 				</or>
 			</condition>
